--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </ul>    
             </nav>
         </div>
-
+        <!-- Carousel -->
         <div class="jumbotron">
             <div class="carousel-container">
                 <div class="carousel">
