--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Landing Page | Riza</title>
 
     <!-- Import eksternal css -->
     <link rel="stylesheet" href="./assets/style/style.css">
