--- a/index.html
+++ b/index.html
@@ -34,10 +34,18 @@
                 <div class="next" onclick="nextSlide()">&#10095;</div>
             </div>
         </div>
+
+        <div class="login">
+            <a href="./form/login.html"><button class="button">Login Sebagai Admin</button></a>   
+        </div>
     </container>
 
+ 
+
     <!-- Script untuk javascript -->
-    <script src="./script.js"></script>
+    <script src="./script.js">
+        
+    </script>
 
 
     <footer>
