--- a/dashboard.html
+++ b/dashboard.html
@@ -5,31 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="./assets/style/dashboard.css">
+    <!-- <link rel="stylesheet" href="./assets/style/dashboard.css"> -->
+    <link rel="stylesheet" href="./dashboard.css">
 </head>
 <body>
     <div class="container">
-        <h2>Admin Dashboard</h2>
-        <a href="./form/formadd.html"> <button class="button">Tambah Data</button></a>    
-        <table>
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Nama</th>
-                    <th>Email</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody id="userDataBody">
-                <!-- Data akan ditampilkan di sini -->
-            </tbody>
-        </table>
-        <br>     
-        <a class="logout" href="./form/login.html"><button class="delete">Logout</button></a> 
+        <h2 class="fw-bold text-center mb-4">Admin Dashboard</h2> 
+
+        <div class="app-content" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="69:34">
+            <!--begin::Container--> <div class="container-fluid" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="71:40">
+                <!--begin::Row--> <div class="row" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="73:30">
+                    <!--begin::Col--> <div class="col-lg-3 col-6" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="75:43">
+                        <!--begin::Small Box Widget 1--> <div class="small-box text-bg-primary" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="77:56"> <div class="inner" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="78:38"> <h3 data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="79:25">150</h3> <p data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="81:24">New Orders</p> </div> <svg class="small-box-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="89:20"> <path d="M2.25 2.25a.75.75 0 000 1.5h1.386c.17 0 .318.114.362.278l2.558 9.592a3.752 3.752 0 00-2.806 3.63c0 .414.336.75.75.75h15.75a.75.75 0 000-1.5H5.378A2.25 2.25 0 017.5 15h11.218a.75.75 0 00.674-.421 60.358 60.358 0 002.96-7.228.75.75 0 00-.525-.965A60.864 60.864 0 005.68 4.509l-.232-.867A1.875 1.875 0 003.636 2.25H2.25zM3.75 20.25a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0zM16.5 20.25a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0z" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="90:22"></path> </svg> <a href="#" class="small-box-footer link-light link-underline-opacity-0 link-underline-opacity-50-hover" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="97:20"> More info <i class="bi bi-link-45deg" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="98:32"></i> </a> </div> <!--end::Small Box Widget 1-->
+
+                    </div> <!--end::Col-->
+                <div class="col-lg-3 col-6" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="104:43">
+                    <!--begin::Small Box Widget 2-->
+                    <div class="small-box text-bg-success" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="106:56"> <div class="inner" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="107:38"> <h3 data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="108:25">53<sup class="fs-5" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="108:45">%</sup></h3> <p data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="110:24">Bounce Rate</p> </div> <svg class="small-box-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="118:20"> <path d="M18.375 2.25c-1.035 0-1.875.84-1.875 1.875v15.75c0 1.035.84 1.875 1.875 1.875h.75c1.035 0 1.875-.84 1.875-1.875V4.125c0-1.036-.84-1.875-1.875-1.875h-.75zM9.75 8.625c0-1.036.84-1.875 1.875-1.875h.75c1.036 0 1.875.84 1.875 1.875v11.25c0 1.035-.84 1.875-1.875 1.875h-.75a1.875 1.875 0 01-1.875-1.875V8.625zM3 13.125c0-1.036.84-1.875 1.875-1.875h.75c1.036 0 1.875.84 1.875 1.875v6.75c0 1.035-.84 1.875-1.875 1.875h-.75A1.875 1.875 0 013 19.875v-6.75z" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="119:22"></path> </svg> <a href="#" class="small-box-footer link-light link-underline-opacity-0 link-underline-opacity-50-hover" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="126:20">
+                More info <i class="bi bi-link-45deg" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="127:32"></i> </a> </div> <!--end::Small Box Widget 2--> </div> <!--end::Col--> <div class="col-lg-3 col-6" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="133:43">
+                <!--begin::Small Box Widget 3-->
+                <div class="small-box text-bg-warning" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="135:56"> <div class="inner" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="136:38"> <h3 data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="137:25">44</h3> <p data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="139:24">User Registrations</p> </div> <svg class="small-box-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="147:20"> <path d="M6.25 6.375a4.125 4.125 0 118.25 0 4.125 4.125 0 01-8.25 0zM3.25 19.125a7.125 7.125 0 0114.25 0v.003l-.001.119a.75.75 0 01-.363.63 13.067 13.067 0 01-6.761 1.873c-2.472 0-4.786-.684-6.76-1.873a.75.75 0 01-.364-.63l-.001-.122zM19.75 7.5a.75.75 0 00-1.5 0v2.25H16a.75.75 0 000 1.5h2.25v2.25a.75.75 0 001.5 0v-2.25H22a.75.75 0 000-1.5h-2.25V7.5z" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="148:22"></path> </svg> <a href="#" class="small-box-footer link-dark link-underline-opacity-0 link-underline-opacity-50-hover" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="155:20">
+                More info <i class="bi bi-link-45deg" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="156:32"></i> </a> </div> <!--end::Small Box Widget 3--> </div> <!--end::Col--> <div class="col-lg-3 col-6" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="162:43">
+                <!--begin::Small Box Widget 4-->
+                <div class="small-box text-bg-danger" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="164:55"> <div class="inner" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="165:38"> <h3 data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="166:25">65</h3> <p data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="168:24">Unique Visitors</p> </div> <svg class="small-box-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="176:20"> <path clip-rule="evenodd" fill-rule="evenodd" d="M2.25 13.5a8.25 8.25 0 018.25-8.25.75.75 0 01.75.75v6.75H18a.75.75 0 01.75.75 8.25 8.25 0 01-16.5 0z" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="177:22"></path> <path clip-rule="evenodd" fill-rule="evenodd" d="M12.75 3a.75.75 0 01.75-.75 8.25 8.25 0 018.25 8.25.75.75 0 01-.75.75h-7.5a.75.75 0 01-.75-.75V3z" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="182:22"></path> </svg> <a href="#" class="small-box-footer link-light link-underline-opacity-0 link-underline-opacity-50-hover" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="191:20"></path> </svg> <a href="#" class="small-box-footer link-dark link-underline-opacity-0 link-underline-opacity-50-hover" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="155:20">
+                 More info <i class="bi bi-link-45deg" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="156:32"></i> </a> </div> <!--end::Small Box Widget 3--> </div> <!--end::Col--> <div class="col-lg-3 col-6" data-astro-source-file="C:/Users/ASUS/Downloads/AdminLTE-master/AdminLTE-master/src/html/pages/index.astro" data-astro-source-loc="162:43"></div>
+                 <div>
+                    <br>
+                    <button type="button" class="btn btn-outline-success" onclick="redirectToFormAdd()">Add Data</button>
+                    <button type="button" class="btn btn-outline-primary" onclick="redirectToProductList()">List Data</button>
+                    <a class="logout" href="./form/login.html"><button type="button" class="btn btn-outline-danger">Logout</button></a>                  
+                 </div>
+
+                 
     </div>
 
     <script src="./assets/js/data.js"></script>
     <script>
+        // Function to redirect to formadd.html
+        function redirectToFormAdd() {
+            window.location.href = "./form/formadd.html";
+        }
+        function redirectToProductList() {
+            window.location.href = "./productlisting.html";
+        }
+    </script>
+    <!-- <script>
         // Menggunakan variabel userData yang telah dideklarasikan di dalam file data.js
         var userDatas = getAllData();
 
@@ -48,6 +68,6 @@
             `;
             tableBody.appendChild(row);
         });
-    </script>
+    </script> -->
 </body>
 </html>
